<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboardbackground"
    tools:context=".OnBoardActivity">

        <ViewFlipper
            android:id="@+id/viewFlipper1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/skip"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentTop="true"
                    android:id="@+id/onboardimage1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/onboardimage1"
                    android:layout_above="@+id/onboardtexts1"
                    android:scaleType="fitXY"
                    android:contentDescription="TODO" />
                <RelativeLayout
                    android:id="@+id/onboardtexts1"
                    android:layout_margin="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    >
                    <TextView
                        android:id="@+id/on1t1"
                        android:gravity="start"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="45sp"
                        android:text="@string/transform"
                        />
                    <TextView
                        android:id="@+id/on1t2"
                        android:layout_below="@+id/on1t1"
                        android:gravity="start"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="normal"
                        android:textSize="35sp"
                        android:text="@string/your_life"
                        />
                    <TextView
                        android:layout_marginTop="10dp"
                        android:textStyle="italic"
                        android:autoSizeTextType="uniform"
                        android:layout_marginBottom="10dp"
                        android:layout_below="@+id/on1t2"
                        android:gravity="start"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:text="Create your own fitness Routine\nWhere ever you are."
                        />
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentTop="true"
                    android:id="@+id/onboardimage2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/onboardimage3"
                    android:layout_above="@+id/onboardtexts2"
                    android:scaleType="fitXY"
                    />
                <RelativeLayout
                    android:id="@+id/onboardtexts2"
                    android:layout_margin="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    >
                    <TextView
                        android:id="@+id/on3t1"
                        android:gravity="start"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="45dp"
                        android:text="TRANSFORM"
                        />
                    <TextView
                        android:id="@+id/on3t2"
                        android:layout_below="@+id/on3t1"
                        android:gravity="start"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="normal"
                        android:textSize="35sp"
                        android:text="@string/your_health"
                        />
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_below="@+id/on3t2"
                        android:gravity="start"
                        android:textStyle="italic"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/feel_better_like_never_before_nstart_today"
                        />
                </RelativeLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentTop="true"
                    android:id="@+id/onboardimage3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/onboardimage2"
                    android:layout_above="@+id/onboardtexts3"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/todo" />
                <RelativeLayout
                    android:id="@+id/onboardtexts3"
                    android:layout_margin="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    >
                    <TextView
                        android:id="@+id/on2t1"
                        android:gravity="start"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="45sp"
                        android:text="TRANSFORM"
                        />
                    <TextView
                        android:id="@+id/on2t2"
                        android:layout_below="@+id/on2t1"
                        android:gravity="start"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="normal"
                        android:textSize="35dp"
                        android:text="@string/your_style"
                        />
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_below="@+id/on2t2"
                        android:gravity="start"
                        android:textStyle="italic"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/cntrol_your_own_fitness_routine_nwhere_ever_you_are"
                        />
                </RelativeLayout>

            </RelativeLayout>

        </ViewFlipper>
        <ViewFlipper
            android:id="@+id/viewFlipper2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_above="@+id/skip"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/c1"
                    android:layout_margin="5dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/p1"
                    android:contentDescription="@string/todo" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/c2"
                    android:layout_margin="5dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/p3"
                    android:contentDescription="@string/todo" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/c3"
                    android:layout_margin="5dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/p2"
                    android:contentDescription="@string/todo" />
            </RelativeLayout>
        </ViewFlipper>
        <Button
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/skip"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/skip"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
</RelativeLayout>